# cv

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/core/: __init__.py  config.py
app/dependencies/: __init__.py  common.py
app/routers/: __init__.py  cv.py  health.py  portfolio.py
app/schemas/: __init__.py  cv.py  portfolio.py
app/services/: __init__.py  markdown_service.py  portfolio_service.py
app/utils/: __init__.py  logging.py
data/: mycv.md  portfolio.json
requirements/: base.txt  dev.txt  markdown.txt  prod.txt
static/: index.html
templates/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_services.py
